Bind C-\ to last window

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,30 +1,31 @@
-# reload config file
-bind r source-file ~/.config/tmux/tmux.conf
+# Enable 24 bit support
+set -sa terminal-overrides ",xterm*:Tc"
 
-# split panes using "v" and "h"
-bind v split-window -v
-bind h split-window -h
+# Set prefix
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+
+# Split panes using "v" and "h"
+bind v split-window -v -c "#{pane_current_path}"
+bind h split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind %
 
-# switch panes using Alt-arrow without prefix
+# Switch panes using Alt-arrow without prefix
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-# resize panes using Shift-arrow without prefix
+# Resize panes using Shift-arrow without prefix
 bind -n S-Left resize-pane -L
 bind -n S-Right resize-pane -R
 bind -n S-Up resize-pane -U
 bind -n S-Down resize-pane -D
 
-# toggle status bar
+# Toggle status bar
 bind C-b set-option -g status
-set -g default-terminal "tmux-256color"
-
-# enable 24 bit support
-set -ga terminal-overrides ',*256col*:Tc'
 
 setw -g mouse on
 
@@ -33,15 +34,34 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Plugins
-set -g @plugin 'jimeh/tmux-themepack'
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin "jimeh/tmux-themepack"
+set -g @plugin "tmux-plugins/tpm"
+set -g @plugin "tmux-plugins/tmux-yank"
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|l?n?vim?x?|fzf)(diff)?$'"
+bind-key -n "C-h" if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n "C-j" if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n "C-k" if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n "C-l" if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+
+bind-key -T copy-mode-vi "C-h" select-pane -L
+bind-key -T copy-mode-vi "C-j" select-pane -D
+bind-key -T copy-mode-vi "C-k" select-pane -U
+bind-key -T copy-mode-vi "C-l" select-pane -R
+
+# Bind C-\ to last window (my preference over vim-tmux-navigator)
+bind-key -n "C-\\" select-window -l
 
 # Theme
-set -g @themepack 'powerline/default/cyan'
-set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @themepack "powerline/default/cyan"
 
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+# Keybindings
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b '~/.tmux/plugins/tpm/tpm'
+run -b "~/.tmux/plugins/tpm/tpm"
