Try a different powerline

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,5 +1,6 @@
-# Enable 24 bit support
+# Fix color issues
 set -sa terminal-overrides ",xterm*:Tc"
+set -g default-terminal "xterm-256color"
 
 # Set prefix
 unbind C-b
@@ -34,9 +35,9 @@ set -g base-index 1
 setw -g pane-base-index 1
 
 # Plugins
-set -g @plugin "jimeh/tmux-themepack"
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-yank"
+set -g @plugin "dracula/tmux"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -52,11 +53,12 @@ bind-key -T copy-mode-vi "C-j" select-pane -D
 bind-key -T copy-mode-vi "C-k" select-pane -U
 bind-key -T copy-mode-vi "C-l" select-pane -R
 
-# Bind C-\ to last window (my preference over vim-tmux-navigator)
+# Bind C-\\ to last window (my preference over vim-tmux-navigator)
 bind-key -n "C-\\" select-window -l
 
 # Theme
-set -g @themepack "powerline/default/cyan"
+# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
+set -g @dracula-plugins "ssh-session git battery cpu-usage gpu-usage ram-usage time"
 
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
