--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,7 +37,10 @@ setw -g pane-base-index 1
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "dracula/tmux"
+set -g @plugin "thewtex/tmux-mem-cpu-load"
+set -g @plugin "tmux-plugins/tmux-prefix-highlight"
+set -g @plugin "tmux-plugins/tmux-battery"
+set -g @plugin "kristijanhusak/tmux-simple-git-status"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -57,8 +60,30 @@ bind-key -T copy-mode-vi "C-l" select-pane -R
 bind-key -n "C-\\" select-window -l
 
 # Theme
-# available plugins: battery, cpu-usage, git, gpu-usage, ram-usage, tmux-ram-usage, network, network-bandwidth, network-ping, ssh-session, attached-clients, network-vpn, weather, time, mpc, spotify-tui, kubernetes-context, synchronize-panes
-set -g @dracula-plugins "ssh-session git battery cpu-usage gpu-usage ram-usage time"
+# Kanagawa colors for Tmux
+set -g @prefix_highlight_output_prefix ""
+set -g @prefix_highlight_output_suffix ""
+
+set -g mode-style "fg=#658594,bg=#2D4F67"
+set -g message-style "fg=#658594,bg=#2D4F67"
+set -g message-command-style "fg=#658594,bg=#2D4F67"
+set -g pane-border-style "fg=#2D4F67"
+set -g pane-active-border-style "fg=#658594"
+set -g status "on"
+set -g status-justify "left"
+set -g status-style "fg=#658594,bg=#1F1F28"
+set -g status-left-length "100"
+set -g status-right-length "100"
+set -g status-left-style NONE
+set -g status-right-style NONE
+set -g status-left "#[fg=#658594,bg=#1F1F28,nobold,nounderscore,noitalics]"
+set -g status-right "#{prefix_highlight}#[fg=#2D4F67,bg=#1F1F28,nobold,nounderscore,noitalics] #[fg=#658594,bg=#2D4F67]#{simple_git_status}  #($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load -t 0 -a 0 -r -p -v)  #{battery_status_bg} #{battery_icon} #{battery_percentage}  %Y-%m-%d  %I:%M %p #[fg=#658594,bg=#2D4F67,nobold,nounderscore,noitalics]#[fg=#16161D,bg=#658594,bold] #h "
+
+setw -g window-status-activity-style "underscore,fg=#7FB4CA,bg=#1F1F28"
+setw -g window-status-separator ""
+setw -g window-status-style "NONE,fg=#7FB4CA,bg=#1F1F28"
+setw -g window-status-format "#[fg=#1F1F28,bg=#1F1F28,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1F1F28,bg=#1F1F28,nobold,nounderscore,noitalics]"
+setw -g window-status-current-format "#[fg=#1F1F28,bg=#2D4F67,nobold,nounderscore,noitalics]#[fg=#658594,bg=#2D4F67,bold] #I  #W #F #[fg=#2D4F67,bg=#1F1F28,nobold,nounderscore,noitalics]"
 
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
