--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,7 +40,6 @@ set -g @plugin "tmux-plugins/tmux-yank"
 set -g @plugin "tmux-plugins/tmux-cpu"
 set -g @plugin "tmux-plugins/tmux-prefix-highlight"
 set -g @plugin "tmux-plugins/tmux-battery"
-set -g @plugin "kristijanhusak/tmux-simple-git-status"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -77,7 +76,7 @@ set -g status-right-length "100"
 set -g status-left-style NONE
 set -g status-right-style NONE
 set -g status-left "#[fg=#658594,bg=#1F1F28,nobold,nounderscore,noitalics]"
-set -g status-right "#{prefix_highlight}#[fg=#2D4F67,bg=#1F1F28,nobold,nounderscore,noitalics] #[fg=#658594,bg=#2D4F67]#{simple_git_status}  CPU: #{cpu_percentage} RAM: #{ram_percentage}  #{battery_status_bg} #{battery_icon} #{battery_percentage}  %Y-%m-%d  %I:%M %p #[fg=#658594,bg=#2D4F67,nobold,nounderscore,noitalics]#[fg=#16161D,bg=#658594,bold] #h "
+set -g status-right "#{prefix_highlight}#[fg=#2D4F67,bg=#1F1F28,nobold,nounderscore,noitalics] #[fg=#658594,bg=#2D4F67] CPU: #{cpu_percentage} RAM: #{ram_percentage}  #{battery_status_bg} #{battery_icon} #{battery_percentage}  %Y-%m-%d  %I:%M %p #[fg=#658594,bg=#2D4F67,nobold,nounderscore,noitalics]#[fg=#16161D,bg=#658594,bold] #h "
 
 setw -g window-status-activity-style "underscore,fg=#7FB4CA,bg=#1F1F28"
 setw -g window-status-separator ""
