--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -37,9 +37,7 @@ setw -g pane-base-index 1
 # Plugins
 set -g @plugin "tmux-plugins/tpm"
 set -g @plugin "tmux-plugins/tmux-yank"
-set -g @plugin "tmux-plugins/tmux-cpu"
 set -g @plugin "tmux-plugins/tmux-prefix-highlight"
-set -g @plugin "tmux-plugins/tmux-battery"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -56,33 +54,18 @@ bind-key -T copy-mode-vi "C-k" select-pane -U
 bind-key -T copy-mode-vi "C-l" select-pane -R
 
 # Bind C-\\ to last window (my preference over vim-tmux-navigator)
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-window -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-window -l'"
+
 bind-key -n "C-\\" select-window -l
 
 # Theme
-# Kanagawa colors for Tmux
-set -g @prefix_highlight_output_prefix ""
-set -g @prefix_highlight_output_suffix ""
-
-set -g mode-style "fg=#658594,bg=#2D4F67"
-set -g message-style "fg=#658594,bg=#2D4F67"
-set -g message-command-style "fg=#658594,bg=#2D4F67"
-set -g pane-border-style "fg=#2D4F67"
-set -g pane-active-border-style "fg=#658594"
-set -g status "on"
-set -g status-justify "left"
-set -g status-style "fg=#658594,bg=#1F1F28"
-set -g status-left-length "100"
-set -g status-right-length "100"
-set -g status-left-style NONE
-set -g status-right-style NONE
-set -g status-left "#[fg=#658594,bg=#1F1F28,nobold,nounderscore,noitalics]"
-set -g status-right "#{prefix_highlight}#[fg=#2D4F67,bg=#1F1F28,nobold,nounderscore,noitalics] #[fg=#658594,bg=#2D4F67] CPU: #{cpu_percentage} RAM: #{ram_percentage}  #{battery_status_bg} #{battery_icon} #{battery_percentage}  %Y-%m-%d  %I:%M %p #[fg=#658594,bg=#2D4F67,nobold,nounderscore,noitalics]#[fg=#16161D,bg=#658594,bold] #h "
-
-setw -g window-status-activity-style "underscore,fg=#7FB4CA,bg=#1F1F28"
-setw -g window-status-separator ""
-setw -g window-status-style "NONE,fg=#7FB4CA,bg=#1F1F28"
-setw -g window-status-format "#[fg=#1F1F28,bg=#1F1F28,nobold,nounderscore,noitalics]#[default] #I  #W #F #[fg=#1F1F28,bg=#1F1F28,nobold,nounderscore,noitalics]"
-setw -g window-status-current-format "#[fg=#1F1F28,bg=#2D4F67,nobold,nounderscore,noitalics]#[fg=#658594,bg=#2D4F67,bold] #I  #W #F #[fg=#2D4F67,bg=#1F1F28,nobold,nounderscore,noitalics]"
+set -g @plugin 'wfxr/tmux-power'
+set -g @tmux_power_right_arrow_icon     ''
+set -g @tmux_power_left_arrow_icon      ''
 
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
