--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,6 +1,8 @@
 # Fix color issues
-set -sa terminal-overrides ",xterm*:Tc"
-set -g default-terminal "xterm-256color"
+set -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+set -as terminal-overrides ',*:sitm=\E[3m'
+set -as terminal-overrides ',*:ritm=\E[23m'
 
 # Set prefix
 unbind C-b
