--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,9 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -as terminal-overrides ',*:sitm=\E[3m'
 set -as terminal-overrides ',*:ritm=\E[23m'
 
+# Enable xterm-keys for proper Ctrl/Option+Arrow handling
+set-window-option -g xterm-keys on
+
 # Set prefix
 unbind C-b
 set -g prefix C-a
@@ -14,12 +17,6 @@ bind v split-window -v -c "#{pane_current_path}"
 bind h split-window -h -c "#{pane_current_path}"
 unbind '"'
 unbind %
-
-# Switch panes using Alt-arrow without prefix
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
 
 # Resize panes using Shift-arrow without prefix
 bind -n S-Left resize-pane -L
