--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,9 +8,8 @@ set -as terminal-overrides ',*:ritm=\E[23m'
 set-window-option -g xterm-keys on
 
 # Set prefix
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
+set -g prefix C-b
+bind C-b send-prefix
 
 # Split panes using "v" and "h"
 bind v split-window -v -c "#{pane_current_path}"
@@ -25,7 +24,7 @@ bind -n S-Up resize-pane -U
 bind -n S-Down resize-pane -D
 
 # Toggle status bar
-bind C-b set-option -g status
+bind s set-option -g status
 
 setw -g mouse on
 
