--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -4,6 +4,9 @@ set -ag terminal-overrides ",xterm-256color:RGB"
 set -as terminal-overrides ',*:sitm=\E[3m'
 set -as terminal-overrides ',*:ritm=\E[23m'
 
+# Enable cursor shape changes in tmux
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+
 # Enable xterm-keys for proper Ctrl/Option+Arrow handling
 set-window-option -g xterm-keys on
 
