--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -60,8 +60,6 @@ if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
     "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-window -l'"
 
-bind-key -n "C-\\" select-window -l
-
 # Theme
 set -g @plugin 'wfxr/tmux-power'
 set -g @tmux_power_right_arrow_icon     ''
@@ -71,7 +69,9 @@ set -g @plugin "tmux-plugins/tmux-prefix-highlight"
 # Keybindings
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -f -selection primary | xclip -i -selection clipboard"
+if-shell '[ "$(uname -s)" = "Darwin" ]' \
+    'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"' \
+    'bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -selection clipboard"'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run -b "~/.tmux/plugins/tpm/tpm"
+run -b "~/.config/tmux/plugins/tpm/tpm"
