--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,3 +1,12 @@
+# Reduce escape delay (important for nvim inside tmux)
+set -sg escape-time 10
+
+# Renumber windows when one is closed
+set -g renumber-windows on
+
+# Vi mode for copy
+setw -g mode-keys vi
+
 # Fix color issues
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
