--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -40,6 +40,10 @@ bind s set-option -g status
 
 setw -g mouse on
 
+# Smoother scrolling - send 1 line per scroll tick instead of 3
+bind -T copy-mode-vi WheelUpPane send-keys -X -N 1 scroll-up
+bind -T copy-mode-vi WheelDownPane send-keys -X -N 1 scroll-down
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
