--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -66,12 +66,8 @@ bind-key -T copy-mode-vi "C-j" select-pane -D
 bind-key -T copy-mode-vi "C-k" select-pane -U
 bind-key -T copy-mode-vi "C-l" select-pane -R
 
-# Bind C-\\ to last window (my preference over vim-tmux-navigator)
-tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
-if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-window -l'"
-if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-    "bind-key -n 'C-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-window -l'"
+# Bind C-\\ to last window (vim-aware)
+bind-key -n 'C-\\' if-shell "$is_vim" 'send-keys C-\\\\' 'select-window -l'
 
 # Theme
 set -g @plugin 'wfxr/tmux-power'
