--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -66,8 +66,8 @@ bind-key -T copy-mode-vi "C-j" select-pane -D
 bind-key -T copy-mode-vi "C-k" select-pane -U
 bind-key -T copy-mode-vi "C-l" select-pane -R
 
-# Bind C-\\ to last window (vim-aware)
-bind-key -n 'C-\\' if-shell "$is_vim" 'send-keys C-\\\\' 'select-window -l'
+# Bind C-\ to last window (vim-aware)
+bind-key -n 'C-\' if-shell "$is_vim" 'send-keys C-\\' 'select-window -l'
 
 # Theme
 set -g @plugin 'wfxr/tmux-power'
